[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-history-manager"
version = "0.1.0"
description = "Manage local Codex history: search, export, migrate, clone, rebind provider, and perform guarded history rewrites."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Zhong" }
]
keywords = ["codex", "history", "cli", "migration", "handoff"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]

[project.scripts]
codex-history-manager = "codex_history_manager:main"

[tool.setuptools]
py-modules = ["codex_history_manager"]
packages = ["scripts"]

[tool.setuptools.package-data]
scripts = ["*.py"]
